# json-diff-view

./: Cargo.toml  README.md
examples/: python_example.py  simple_diff.rs
python/: README.md  install.py  pyproject.toml  setup.py
src/: core.rs  lib.rs  main.rs  python.rs
