[package]
name = "json-diff-view"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool for visually displaying differences between JSON files in a human-readable format"
license = "MIT"
readme = "README.md"
repository = "https://github.com/your-username/json-diff-view"
keywords = ["json", "diff", "view", "visualization", "comparison"]
categories = ["command-line-utilities", "development-tools"]

# Library configuration
[lib]
name = "json_diff_view"
crate-type = ["cdylib", "rlib"]

# Binary configuration (CLI tool)
[[bin]]
name = "json-diff-view"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }

# Optional PyO3 dependency for Python bindings
pyo3 = { version = "0.19", features = ["extension-module"], optional = true }

[features]
default = []
python-bindings = ["pyo3"]

# Build dependencies for Python bindings
[build-dependencies]
pyo3-build-config = { version = "0.19", optional = true }

[package.metadata.python]
bindings-dir = "python"
