[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-rust>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json-diff-view"
version = "0.1.1"
description = "A tool for visually displaying differences between JSON files in a human-readable format"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.7"
